--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  flutter_screenutil: ^5.9.3
+  nfc_manager: ^3.5.0
 
 dev_dependencies:
   flutter_test:
